# cffi_template

./: LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py
src/cffi_test/: cli.py  pi.c  pi_extension_build.py
