[metadata]
name = cffi_template
description = CFFI project template
url = http://github.com/parantapa/cffi_template

long_description = file: README.rst
license = MIT

author = Parantapa Bhattacharya
author_email = pb+pypi@parantapa.net

classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
zip_safe = False

packages = find:
package_dir =
    =src

python_requires = >=3.10
setup_requires =
    setuptools_scm
    cffi >= 1.0.0

install_requires =
    click
    cffi >= 1.0.0

[options.entry_points]
console_scripts =
    cffi_test = cffi_test.cli:cli
